# claude-autopilot

./: .gitignore  SKILL.md  dispatch.md  intake.md  poll.md  setup.md  status.md  system-prompt.md
.claude-plugin/: plugin.json
cli/: pyproject.toml
cli/src/autopilot_tui/: __main__.py  api.py  app.py  parser.py  theme.py
cli/src/autopilot_tui/widgets/: artifacts.py  events.py  progress.py  question.py  session_list.py
cli/tests/: test_tui_e2e.py  test_tui_mocked.py
docs/: 2026-04-10-autopilot-tui-design.md
docs/autopilot/: tui-plan.md
remote-skills/: investigate.md  podcast-pimsleur.md  podcast.md
scripts/: dispatch-gate.py  generate.sh  test_dispatch_gate.py  verify-dialogue.py
skills/brainstorming/: SKILL.md
skills/investigate/: SKILL.md
skills/podcast/: SKILL.md
skills/podcast-steelman/: SKILL.md
skills/podcast/scripts/: generate.sh
