[project]
name = "autopilot-tui"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "textual>=3.0",
    "httpx>=0.27",
]

[project.scripts]
autopilot-tui = "autopilot_tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autopilot_tui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
